--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </a>
     </li>
     <li class="item-menu">
-      <a href="habilidades.html"> <!-- ✅ AQUI está o link para a nova página -->
+      <a href="habilidades.html">
         <span class="icon"><i class="bi bi-cursor"></i></span>
         <span class="txt-link">Habilidades</span>
       </a>
@@ -49,25 +49,24 @@
   </ul>
 </nav>
 
-<div class="começo">
-  <img src="img/milly-silly-cat.gif" class="gato">
-  <img src="img/q24yf4w9w5k21 (1).gif" class="aranha">
-  <img src="img/R.gif" class="euluke">
 
-  <h1 class="título">Eu sou Miguel Augusto!</h1>
-  <h2 class="h2">(E eu estudo programação)</h2>
 
-  <p class="paragrafo">
-    Esse é um site sobre mim, aqui você irá encontrar informações sobre mim como:
-  </p>
+<h1 class="minhas">  Minhas habilidades  </h1>
 
-  <p class="habilidades">- Habilidades</p>
+<div class="coisas">
 
-  <p class="site">
-    O site está em fase inicial de desenvolvimento, então por enquanto terá apenas disponível na barra lateral o tópico "habilidades".
-  </p>
 
-  <p class="subsite">Espero que gostem!</p>
+<p> - Conhecimento sobre Minecraft </p>
+<p> - Xadrez </p>
+<p> - Cubo mágico 3x3 </p>
+<p> - Assuntos sobre a Segunda Guerra em história </p>
+<p> - Conhecimento mímino e básico (por enquanto) em HTML e CSS </p>
+<p> - Conhecimento sobre o Homem-Aranha </p>
+
+
+<img src="img/icegif-444.gif" class="steve">
+
+  
 </div>
 
 <footer>
